--- a/CSManagement/CSManagement/Views/News/Details.cshtml
+++ b/CSManagement/CSManagement/Views/News/Details.cshtml
@@ -36,13 +36,20 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.New_Date)
+            @Html.DisplayNameFor(model => model.New_DateStart)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.New_Date)
+            @Html.DisplayFor(model => model.New_DateStart)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.New_DateEnd)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.New_DateEnd)
+        </dd>
     </dl>
 </div>
 <p>
