--- a/CSManagement/CSManagement/Views/News/Create.cshtml
+++ b/CSManagement/CSManagement/Views/News/Create.cshtml
@@ -29,18 +29,39 @@
                     </div>
 
                     <div class="form-group col-md-4">
-                        @Html.LabelFor(model => model.New_Date, htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.New_DateStart, htmlAttributes: new { @class = "control-label" })
                         <div class="input-group">
                             <div class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                             </div>
-                            <input type="text" id="newdate" name="newdate" class="form-control" data-inputmask="'alias': 'dd-mm-yyyy'" data-mask>
+                            @Html.TextBoxFor(model => model.New_DateStart,
+                                new { @Value = @DateTime.Now.ToString("MM/dd/yyyy"), @class = "datepicker form-control" })
+                        </div>
+                    </div>
+
+                    <div class="form-group col-md-4">
+                        @Html.LabelFor(model => model.New_DateEnd, htmlAttributes: new { @class = "control-label" })
+                        <div class="input-group">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            @Html.TextBoxFor(model => model.New_DateEnd,
+                                new { @Value = @DateTime.Now.ToString("MM/dd/yyyy"), @class = "datepicker form-control" })
                         </div>
                     </div>
 
                     <div class="form-group col-md-4">
                         @Html.LabelFor(model => model.New_Img, htmlAttributes: new { @class = "control-label" })
                         <input type="file" id="file" name="file">
+                    </div>
+
+                    <div class="form-group col-md-4">
+                        @Html.LabelFor(model => model.Status_News, htmlAttributes: new { @class = "control-label" })
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa  fa-mortar-board"></i></span>
+                            @Html.DropDownList("New_Type", null, "เลือกประเภทข่าว", htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.Status_News, "", new { @class = "text-danger" })
+                        </div>
                     </div>
 
                     <div class="form-group col-md-12">
