--- a/CSManagement/CSManagement/Views/RegisterLinks/Index.cshtml
+++ b/CSManagement/CSManagement/Views/RegisterLinks/Index.cshtml
@@ -24,6 +24,7 @@
                 <thead>
                     <tr>
                         <th style="text-align:center">ที่</th>
+                        <th style="text-align:center">ชื่อลิ้งค์</th>
                         <th style="text-align:center">ลิงค์เว็บไซต์</th>
                         <th style="text-align:center">จัดการข้อมูล</th>
                     </tr>
@@ -32,17 +33,18 @@
                 <tbody>
                     @foreach (var item in Model)
                     {
-                        <tr>
-                            <td style="text-align:center">@(i++)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Weblink)</td>
-                            <td style="text-align:center">
-                                <div class="delete-section">
-                                    <a class="btn btn-warning" href="@Url.Action("Edit", "RegisterLinks", new { id = item.WL_ID })"><i class="fa fa-edit"></i> แก้ไข</a>
-                                    <a class="btn btn-primary delete-link" href="@Url.Action("Delete", new {id = item.WL_ID})"><i class="fa fa-trash-o"></i>ลบข้อมูล</a>
-                                    <div class="btn btn-danger delete-confirm" style="display:none" data-delete-id="@item.WL_ID"><i class="fa fa-trash-o"></i> ยืนยันการลบ</div>
-                                </div>
-                            </td>
-                        </tr>
+                    <tr>
+                        <td style="text-align:center">@(i++)</td>
+                        <td>@Html.DisplayFor(modelItem => item.WL_Name)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Weblink)</td>
+                        <td style="text-align:center">
+                            <div class="delete-section">
+                                <a class="btn btn-warning" href="@Url.Action("Edit", "RegisterLinks", new { id = item.WL_ID })"><i class="fa fa-edit"></i> แก้ไข</a>
+                                <a class="btn btn-primary delete-link" href="@Url.Action("Delete", new {id = item.WL_ID})"><i class="fa fa-trash-o"></i>ลบข้อมูล</a>
+                                <div class="btn btn-danger delete-confirm" style="display:none" data-delete-id="@item.WL_ID"><i class="fa fa-trash-o"></i> ยืนยันการลบ</div>
+                            </div>
+                        </td>
+                    </tr>
                     }
                 </tbody>
             </table>
