--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -89,6 +89,9 @@
                                 <a href="@Url.Action("Index", "Pictures")"><i class="fa fa-user"></i> <span>รูปภาพประชาสัมพันธ์</span></a>
                             </li>
                             <li>
+                                <a href="@Url.Action("Index", "Picture_Banner")"><i class="fa fa-user"></i> <span>รูปภาพแบนเนอร์</span></a>
+                            </li>
+                            <li>
                                 <a href="@Url.Action("Index", "RegisterLinks")"><i class="fa fa-user"></i> <span>เว็ปสมัครเรียน</span></a>
                             </li>
                         </ul>
